--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "audio-blocks"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 num = "0.4.3"
-rtsan = { git = "https://github.com/realtime-sanitizer/rtsan-standalone-rs", branch = "dev" }
+rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
 
 [features]
-rtsan = ["rtsan/enable"]
+rtsan = ["rtsan-standalone/enable"]
 
 [[bench]]
 name = "blocks"
