--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,18 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-num = "0.4.3"
+num-traits = { version = "0.2.19", default-features = false, features = [
+    "libm",
+] }
 rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
 
 [features]
+default = ["std"]
+std = ["num-traits/std"]
+alloc = []
 rtsan = ["rtsan-standalone/enable"]
 
 [[bench]]
