--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,21 @@
 [package]
+edition = "2024"
 name = "audio-blocks"
 version = "0.1.0"
-edition = "2024"
 
 [dependencies]
-num-traits = { version = "0.2.19", default-features = false, features = [
-    "libm",
-] }
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
 
 [features]
-default = ["std"]
-std = ["num-traits/std"]
 alloc = []
+default = ["std"]
 rtsan = ["rtsan-standalone/enable"]
+std = ["num-traits/std"]
 
 [[bench]]
-name = "blocks"
 harness = false
+name = "blocks"
