--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,17 @@ name = "audio-blocks"
 version = "0.1.0"
 
 [dependencies]
-num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
+num-traits = { version = "0.2.19", default-features = false }
 rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
 
 [features]
-alloc = []
 default = ["std"]
+
+alloc = []
+libm = ["num-traits/libm"]
 rtsan = ["rtsan-standalone/enable"]
 std = ["num-traits/std"]
 
