--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,7 +107,7 @@ jobs:
         if: hashFiles('Cargo.lock') == ''
         run: cargo generate-lockfile
       - name: cargo test
-        run: cargo test --locked --all-features --all-targets
+        run: cargo test --locked --features std,alloc --all-targets
   # coverage:
   #   # use llvm-cov to build and collect coverage and outputs in a format that
   #   # is compatible with codecov.io
