--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ name = "audio-blocks"
 version = "0.1.0"
 
 [dependencies]
-num-traits = { version = "0.2.19", default-features = false, features = [
-    "libm",
-] }
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
