rename and docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ name = "audio-blocks"
 version = "0.1.0"
 
 [dependencies]
-num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 rtsan-standalone = "0.1.1"
 
 [dev-dependencies]
@@ -15,7 +14,7 @@ default = ["std"]
 
 alloc = []
 rtsan = ["rtsan-standalone/enable"]
-std = ["num-traits/std"]
+std = []
 
 [[bench]]
 harness = false
