--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
+authors = ["Stephan Eckes <stephan@neodsp.com>"]
+categories = ["multimedia::audio"]
+description = "Traits to handle all audio data layouts in real-time processes"
 edition = "2024"
+keywords = ["audio", "dsp", "neodsp", "real-time"]
+license = "MIT OR Apache-2.0"
 name = "audio-blocks"
+readme = "README.md"
+repository = "https://github.com/neodsp/audio-blocks"
 version = "0.1.0"
 
 [dependencies]
