--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Stephan Eckes <stephan@neodsp.com>"]
 categories = ["multimedia::audio"]
 description = "Traits to handle all audio data layouts in real-time processes"
 edition = "2024"
-keywords = ["audio", "dsp", "neodsp", "real-time"]
+keywords = ["audio", "dsp", "real-time", "no-std", "neodsp"]
 license = "MIT OR Apache-2.0"
 name = "audio-blocks"
 readme = "README.md"
