--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 name = "audio-blocks"
 readme = "README.md"
 repository = "https://github.com/neodsp/audio-blocks"
+rust-version = "1.85.0"
 version = "0.2.0"
 
 [dependencies]
@@ -21,7 +22,6 @@ criterion = "0.5.1"
 default = ["std"]
 
 alloc = []
-rtsan = ["rtsan-standalone/enable"]
 std = []
 
 [[bench]]
