--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -31,14 +31,11 @@ jobs:
           # now set opt-level to 1
           sed -i '/^\s*\[profile.dev\]/a opt-level = 1' Cargo.toml
           cat Cargo.toml
-      - name: 🔍 Address Sanitizer
-        run: cargo test --lib --tests --target x86_64-unknown-linux-gnu
+      - run: cargo test --lib --tests --target x86_64-unknown-linux-gnu
         env:
           ASAN_OPTIONS: "detect_odr_violation=0:detect_leaks=0"
           RUSTFLAGS: "-Z sanitizer=address"
-      - name: 🩸 Leak Sanitizer
-        if: always()
-        run: cargo test --target x86_64-unknown-linux-gnu
+      - run: cargo test --target x86_64-unknown-linux-gnu
         env:
           LSAN_OPTIONS: "suppressions=lsan-suppressions.txt"
           RUSTFLAGS: "-Z sanitizer=leak"
@@ -54,6 +51,4 @@ jobs:
         with:
           toolchain: ${{ env.NIGHTLY }}
           components: miri
-      - run: cargo miri test
-        env:
-          MIRIFLAGS: ""
+      - run: cargo miri test --lib --bins --tests
