--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,20 @@ license = "MIT OR Apache-2.0"
 name = "audio-blocks"
 readme = "README.md"
 repository = "https://github.com/neodsp/audio-blocks"
-version = "0.1.0"
+rust-version = "1.85.0"
+version = "0.2.0"
 
 [dependencies]
-rtsan-standalone = "0.1.1"
+num = { version = "0.4.3", default-features = false }
+rtsan-standalone = "0.2.0"
 
 [dev-dependencies]
-criterion = "0.5.1"
+criterion = "0.6.0"
 
 [features]
 default = ["std"]
 
 alloc = []
-rtsan = ["rtsan-standalone/enable"]
 std = []
 
 [[bench]]
