autogenerate readme and test code

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -72,3 +72,9 @@ jobs:
         with:
           toolchain: 1.85.0
       - run: cargo check --all-features
+
+  readme:
+    name: Check if the README is up to date.
+    run: |
+      cargo install cargo-rdme
+      cargo rdme --check
