add runs-on to new action

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -75,6 +75,7 @@ jobs:
 
   readme:
     name: 📖 README Check
+    runs-on: ubuntu-latest
     run: |
       cargo install cargo-rdme
       cargo rdme --check
