--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -76,6 +76,6 @@ jobs:
   readme:
     name: 📖 README Check
     runs-on: ubuntu-latest
-    run: |
+    steps: |
       cargo install cargo-rdme
       cargo rdme --check
