--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ name = "audio-blocks"
 readme = "README.md"
 repository = "https://github.com/neodsp/audio-blocks"
 rust-version = "1.85.0"
-version = "0.6.1"
+version = "0.7.0"
 
 [dependencies]
 rtsan-standalone = "0.3.0"
 
 [dev-dependencies]
-criterion = "0.8.1"
+criterion = "0.8.2"
 
 [features]
 default = ["std"]
@@ -25,4 +25,4 @@ std = []
 
 [[bench]]
 harness = false
-name = "blocks"
+name = "block-types"
